name = "artemis-sol"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib", "crates/*"]
resolver = "2"

[workspace.dependencies]
artemis-core = { git = "https://github.com/paradigmxyz/artemis.git", package = "artemis-core" }
anyhow = "1.0.70"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ['sync'] }
tonic = { version = "0.8.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
tonic-build = "0.8.4"
async-trait = "0.1.79"
