[package]
name = "jito-geyser-client"
version = "2.0.5"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]
edition = "2021"
repository = "https://github.com/jito-foundation/geyser-grpc-plugin"
homepage = "https://jito.network/"

[dependencies]
jito-geyser-protos = { path = "../jito-geyser-protos" }
log = { workspace = true }
lru = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
